--- a/src/app/components/utility/spell/spell.component.html
+++ b/src/app/components/utility/spell/spell.component.html
@@ -5,39 +5,30 @@
   [ngClass]="{ 'animate__animated animate__fadeInUp': isInCreateState() }"
 >
   <!-- Spell Panel Heading -->
-  <h5
-    class="
-      pointer
-      col-12
-      justify-content-between
-      d-flex
-      align-items-center
-      spell-title
-    "
-    (click)="toggleSpellCard($event)"
-  >
+  <h5 class="pointer col-12 justify-content-between d-flex align-items-center spell-title"
+  (click)="toggleSpellCard($event)">
     <!-- Spell Title -->
     <strong>
       <span>{{ cardData.name }}</span>
       <span *ngIf="cardData.concentration" class="ml-2">(C)</span>
       <span *ngIf="cardData.ritual" class="ml-2">(R)</span>
       <span class="d-inline-flex flex-wrap align-items-center ml-3">
-        <span
-          *ngFor="let connection of cardData.player_class_connections"
-          class="badge badge-secondary badge-sm mr-3"
-          (click)="
-            emitClassSelectEvent($event, connection.player_class_details.name)
-          "
-        >
-          {{ connection.player_class_details.name }}
-        </span>
+        
+        <ng-container *ngFor="let connection of cardData.player_class_connections">
+          <span class="badge badge-secondary badge-sm mr-3"
+          (click)="emitClassSelectEvent($event, connection.player_class_details.name)">
+            {{ connection.player_class_details.name }}
+          </span>
+        </ng-container>
+
       </span>
     </strong>
 
-    <i
-      class="fa icon"
-      [ngClass]="{ 'fa-chevron-down': !isOpen, 'fa-chevron-up': isOpen }"
-    ></i>
+    <i class="fa icon"
+    [ngClass]="{ 
+      'fa-chevron-down': !isOpen, 
+      'fa-chevron-up': isOpen 
+    }"></i>
   </h5>
 
   <!-- Spell Panel Content -->
@@ -51,155 +42,128 @@
         <h4>{{ cardData.name }}</h4>
 
         <!-- Edit Toggler -->
-        <div
-          class="btn btn-secondary max-content"
-          *ngIf="hasUpdatePermission"
-          (click)="toggleFormState()"
-        >
-          <i
-            class="fa"
+        <ng-container *ngIf="hasUpdatePermission">
+          <div class="btn btn-secondary max-content" (click)="toggleFormState()">
+            <i class="fa"
             [ngClass]="{
               'fa-pencil': isInDisplayState(),
               'fa-times': !isInDisplayState()
-            }"
-          ></i>
-        </div>
+            }"></i>
+          </div>
+        </ng-container>
+
       </div>
 
       <!-- Spell Table -->
-      <div class="container" *ngIf="isInDisplayState()">
-        <div class="row">
-          <!-- Spell Level -->
-          <div class="col-md-3 col-6 d-flex flex-column spell">
-            <strong class="border-bottom-grey column-heading"
-              >SPELL LEVEL</strong
-            >
-            <div class="column-body" *ngIf="cardData.spell_level">
-              {{ cardData.spell_level }}
+      <ng-container *ngIf="isInDisplayState()">
+        <div class="container">
+          <div class="row">
+            <!-- Spell Level -->
+            <div class="col-md-3 col-6 d-flex flex-column spell">
+              <strong class="border-bottom-grey column-heading"
+                >SPELL LEVEL</strong
+              >
+              <div class="column-body" *ngIf="cardData.spell_level">
+                {{ cardData.spell_level }}
+              </div>
+              <div class="column-body placeholder" *ngIf="!cardData.spell_level">
+                Placeholder
+              </div>
             </div>
-            <div class="column-body placeholder" *ngIf="!cardData.spell_level">
-              Placeholder
+  
+            <!-- Casting Time -->
+            <div class="col-md-3 col-6 d-flex flex-column spell">
+              <strong class="border-bottom-grey column-heading"
+                >CASTING TIME</strong
+              >
+              <div class="column-body" *ngIf="cardData.casting_time">
+                {{ cardData.casting_time }}
+              </div>
+              <div class="column-body placeholder" *ngIf="!cardData.casting_time">
+                Placeholder
+              </div>
             </div>
-          </div>
-
-          <!-- Casting Time -->
-          <div class="col-md-3 col-6 d-flex flex-column spell">
-            <strong class="border-bottom-grey column-heading"
-              >CASTING TIME</strong
-            >
-            <div class="column-body" *ngIf="cardData.casting_time">
-              {{ cardData.casting_time }}
+  
+            <!-- Range/Area -->
+            <div class="col-md-3 col-6 d-flex flex-column spell">
+              <strong class="border-bottom-grey column-heading">RANGE/AREA</strong>
+              <div class="column-body" *ngIf="cardData.range; else inputPlaceholder">
+                {{ cardData.range }}
+              </div>
             </div>
-            <div class="column-body placeholder" *ngIf="!cardData.casting_time">
-              Placeholder
+  
+            <!-- Components -->
+            <div class="col-md-3 col-6 d-flex flex-column spell">
+              <strong class="border-bottom-grey column-heading">COMPONENTS</strong>
+              <div class="column-body" *ngIf="cardData.components; else inputPlaceholder">
+                {{ cardData.components }}
+              </div>
             </div>
-          </div>
-
-          <!-- Range/Area -->
-          <div class="col-md-3 col-6 d-flex flex-column spell">
-            <strong class="border-bottom-grey column-heading"
-              >RANGE/AREA</strong
-            >
-            <div class="column-body" *ngIf="cardData.range">
-              {{ cardData.range }}
+  
+            <!-- Duration -->
+            <div class="col-md-3 col-6 d-flex flex-column spell">
+              <strong class="border-bottom-grey column-heading">DURATION</strong>
+              <div class="column-body" *ngIf="cardData.duration; else inputPlaceholder">
+                {{ cardData.duration }}
+              </div>
             </div>
-            <div class="column-body placeholder" *ngIf="!cardData.range">
-              Placeholder
+  
+            <!-- School -->
+            <div class="col-md-3 col-6 d-flex flex-column spell">
+              <strong class="border-bottom-grey column-heading">SCHOOL</strong>
+              <div class="column-body" *ngIf="cardData.school; else inputPlaceholder">
+                {{ cardData.school }}
+              </div>
             </div>
-          </div>
-
-          <!-- Components -->
-          <div class="col-md-3 col-6 d-flex flex-column spell">
-            <strong class="border-bottom-grey column-heading"
-              >COMPONENTS</strong
-            >
-            <div class="column-body" *ngIf="cardData.components">
-              {{ cardData.components }}
+  
+            <!-- Attack/Save -->
+            <div class="col-md-3 col-6 d-flex flex-column spell">
+              <strong class="border-bottom-grey column-heading">ATTACK/SAVE</strong>
+              <div class="column-body" *ngIf="cardData.saving_throw; else inputPlaceholder">
+                {{ cardData.saving_throw }}
+              </div>
             </div>
-            <div class="column-body placeholder" *ngIf="!cardData.components">
-              Placeholder
+  
+            <!-- Damage/Effect -->
+            <div class="col-md-3 col-6 d-flex flex-column spell">
+              <strong class="border-bottom-grey column-heading">EFFECT</strong>
+              <div class="column-body" *ngIf="cardData.damage; else inputPlaceholder">
+                {{ cardData.damage }}
+              </div>
             </div>
-          </div>
-
-          <!-- Duration -->
-          <div class="col-md-3 col-6 d-flex flex-column spell">
-            <strong class="border-bottom-grey column-heading">DURATION</strong>
-            <div class="column-body" *ngIf="cardData.duration">
-              {{ cardData.duration }}
+  
+            <!-- Description -->
+            <div class="col-12 d-flex flex-column spell">
+              <strong class="border-bottom-grey column-heading">DESCRIPTION</strong>
+              <div class="column-body" [innerHTML]="cardData.description"></div>
             </div>
-            <div class="column-body placeholder" *ngIf="!cardData.duration">
-              Placeholder
-            </div>
-          </div>
-
-          <!-- School -->
-          <div class="col-md-3 col-6 d-flex flex-column spell">
-            <strong class="border-bottom-grey column-heading">SCHOOL</strong>
-            <div class="column-body" *ngIf="cardData.school">
-              {{ cardData.school }}
-            </div>
-            <div class="column-body placeholder" *ngIf="!cardData.school">
-              Placeholder
-            </div>
-          </div>
-
-          <!-- Attack/Save -->
-          <div class="col-md-3 col-6 d-flex flex-column spell">
-            <strong class="border-bottom-grey column-heading"
-              >ATTACK/SAVE</strong
-            >
-            <div class="column-body" *ngIf="cardData.saving_throw">
-              {{ cardData.saving_throw }}
-            </div>
-            <div class="column-body placeholder" *ngIf="!cardData.saving_throw">
-              Placeholder
-            </div>
-          </div>
-
-          <!-- Damage/Effect -->
-          <div class="col-md-3 col-6 d-flex flex-column spell">
-            <strong class="border-bottom-grey column-heading">EFFECT</strong>
-            <div class="column-body" *ngIf="cardData.damage">
-              {{ cardData.damage }}
-            </div>
-            <div class="column-body placeholder" *ngIf="!cardData.damage">
-              Placeholder
-            </div>
-          </div>
-
-          <!-- Description -->
-          <div class="col-12 d-flex flex-column spell">
-            <strong class="border-bottom-grey column-heading"
-              >DESCRIPTION</strong
-            >
-            <div class="column-body" [innerHTML]="cardData.description"></div>
           </div>
         </div>
-      </div>
+      </ng-container>
+
 
       <div>
         Classes:
-        <span
-          *ngFor="let connection of cardData.player_class_connections"
-          class="badge badge-secondary badge-lg p-2 mr-3 pointer"
-          (click)="
-            emitClassSelectEvent($event, connection.player_class_details.name)
-          "
-        >
-          {{ connection.player_class_details.name }}
-          <span
-            *ngIf="tokenService.isAdmin()"
-            class="fa fa-trash ml-2"
-            (click)="deleteSpellPlayerClassConnection(connection)"
-          ></span>
-        </span>
+        <ng-container *ngFor="let connection of cardData.player_class_connections">
+          <span class="badge badge-secondary badge-lg p-2 mr-3 pointer"
+          (click)="emitClassSelectEvent($event, connection.player_class_details.name)">
+            {{ connection.player_class_details.name }}
+
+            <ng-container *ngIf="tokenService.isAdmin()">
+              <span class="fa fa-trash ml-2"
+              (click)="deleteSpellPlayerClassConnection(connection)"
+              ></span>
+            </ng-container>
+          </span>
+        </ng-container>
+
 
         <ng-container *ngIf="tokenService.isAdmin()">
+          <ng-container ></ng-container>
           <app-inline-create-button
           [labelText]="'Add Class'"
           (click)="toggleConnectionCreateState()"
-          *ngIf="!isSpellConnectionCreateState; else connectionForm"
-          >     
+          *ngIf="!isSpellConnectionCreateState; else connectionForm">     
           </app-inline-create-button>
         </ng-container>
       </div>
@@ -242,27 +206,27 @@
     class="d-inline-flex align-items-center"
     (submit)="createSpellPlayerClassConnection(connectionModel)"
   >
-    <select
-      class="form-control d-inline-block"
-      name="connection"
-      id="connection"
-      [(ngModel)]="connectionModel.player_class"
-    >
-      <option
-        *ngFor="let playerClass of playerClasses"
-        value="{{ playerClass.pk }}"
-        [attr.disabled]="hasConnection(playerClass) ? true : null"
-      >
-        {{ playerClass.name }}
-      </option>
+    <select class="form-control d-inline-block"
+    name="connection"
+    id="connection"
+    [(ngModel)]="connectionModel.player_class">
+      <ng-container *ngFor="let playerClass of playerClasses">
+        <option [value]="playerClass.pk"  [attr.disabled]="hasConnection(playerClass) ? true : null">
+          {{ playerClass.name }}
+        </option>
+      </ng-container>
     </select>
 
-    <i
-      class="fa fa-times icon mx-2 fa-1-5x"
-      (click)="toggleConnectionCreateState()"
-    ></i>
+    <i class="fa fa-times icon mx-2 fa-1-5x" (click)="toggleConnectionCreateState()"></i>
     <button type="submit" class="mx-2">
       <i class="fa fa-check icon fa-1-5x"></i>
     </button>
   </form>
+</ng-template>
+
+
+<ng-template #inputPlaceholder>
+  <div class="column-body placeholder">
+    Placeholder
+  </div>
 </ng-template>
